# bazel-stencil

./: .gitignore  README.md  WORKSPACE
custom_stencil_rule/: build.bzl  defs.bzl  test.bzl
stencil_1_14/: BUILD.bazel  package.json  stencil.config.ts
stencil_1_15/: BUILD.bazel  package.json  stencil.config.ts  tsconfig.json
stencil_1_15/src/components/my-comp/: my-comp.tsx
